--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "nuxt-app",
+  "name": "Information Dashboard",
+  "version": "1.0.0",
+  "description": "Information Dashboard",
   "private": true,
   "type": "module",
   "scripts": {
@@ -7,10 +9,17 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "lint": "npm run lint:js",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "nuxt": "^3.12.4",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "eslint": "^9.8.0",
+    "prettier": "^3.3.3"
   }
 }
