--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "nuxt": "^3.12.4",
     "vue": "latest"
   },
   "devDependencies": {
     "eslint": "^9.8.0",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "vite-plugin-vuetify": "^2.0.4",
+    "vuetify": "^3.6.14"
   }
 }
