--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^9.8.0",
     "prettier": "^3.3.3",
     "vite-plugin-vuetify": "^2.0.4",
+    "vite-svg-loader": "^5.1.0",
     "vuetify": "^3.6.14"
   }
 }
