Testing approaches to store and use svg icons with Vuetify and Nuxt

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@nuxt/icon": "^1.4.5",
     "eslint": "^9.8.0",
     "prettier": "^3.3.3",
     "vite-plugin-vuetify": "^2.0.4",
